# plonky-edge-block-trace-parser

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
node_adapter/: Cargo.toml  build.rs
node_adapter/src/: adapter.rs  lib.rs
node_adapter/src/edge/: mod.rs
parser/: Cargo.toml
parser/src/: edge_payloads.rs  lib.rs  plonky2.rs  types.rs
src/: edge_payloads.rs  plonky2.rs
