[package]
name = "plonky_edge_block_trace_parser"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
eth_trie_utils = "0.6.0"
hex = { workspace = true }
keccak-hash = "0.10.0"
log = { workspace = true }
plonky_block_proof_gen = { git = "https://github.com/mir-protocol/plonky-block-proof-gen.git", rev = "2f87553eb96cb92eee037a93677bec30c63c6795" }
plonky2_evm = { workspace = true }
rlp = { workspace = true }
rlp-derive = "0.1.0"
rust_decimal = "1.32.0"
serde = "1.0.166"
serde_with = { version = "3.0.0", features = ["base64"] }

# TODO: Replace!
serde_json = { workspace = true }
thiserror = "1.0.41"
